@@ -8,7 +8,9 @@ git - ?
 	- Abstracted parsing skin config files into a SkinFile module
 	- Automatically generate the skin credits on d7, by reading the skin files
 	- Only tagmods can create top-level tags
-	- Notification system (still only used for PMs)
+	- Notification system for
+	  - PMs
+	  - Notifying users of a deletion of an entry they contributed to
 	- Removed the ?l10n= paremeter
 	- Remove sessions that haven't been used for more than a month
 	- Properly copy over search string on switching with the searchtabs
